@@ -5,6 +5,8 @@ CHANGES
 0.8.2 (unreleased)
 ------------------
 
+- Added ``EMailColumn`` which can be used to display mailto links.
+
 - Fixed the default BatchProvider not to lose table sorting query arguments
   from the generated links; now batching and sorting play with each other
   nicely.
